Switched to "has binary targets" rather than "is binary only".

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -100,7 +100,7 @@
         }
       }
 
-      li.binary {
+      li.has_binary_targets {
         grid-column-start: span 2;
         background-image: var(--image-warning);
       }
