--- a/FrontEnd/docc.scss
+++ b/FrontEnd/docc.scss
@@ -181,6 +181,10 @@ header.spi {
       }
     }
 
+    &.latest_stable a {
+      color: var(--header-link-highlight);
+    }
+
     &.doc_archives {
       ul {
         display: flex;
@@ -205,6 +209,14 @@ header.spi {
 
     @media (prefers-color-scheme: dark) {
       background-color: rgba(0, 0, 0, 0.25);
+    }
+  }
+
+  .latest_stable_wrap {
+    background-color: rgba(255, 255, 255, 0.075);
+
+    @media (prefers-color-scheme: dark) {
+      background-color: rgba(0, 0, 0, 0.125);
     }
   }
 
