--- a/FrontEnd/docc.scss
+++ b/FrontEnd/docc.scss
@@ -51,129 +51,88 @@ header.spi {
   z-index: 9998;
 
   .inner {
-    &.branding_and_menu {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 20px;
+    &.breadcrumbs {
+      > nav {
+        padding-block: 6px;
 
-      @media screen and (max-width: $mobile-breakpoint) {
-        grid-template-columns: 1fr;
-
-        a {
-          margin: 0 auto;
-        }
-      }
-
-      h1 {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        font-size: 23px;
-        color: inherit;
-
-        img {
-          margin-right: 10px;
-          max-width: 64px;
-        }
-      }
-
-      .menu {
-        display: flex;
-        align-items: center;
-        justify-self: end;
-
-        @media screen and (max-width: $mobile-breakpoint) {
-          justify-self: center;
-        }
-
-        a {
-          padding: 3px;
-          font-size: 15px;
-          font-weight: 600;
-        }
-
-        ul {
-          margin: 0;
-          padding: 0;
+        > ul {
           display: flex;
-          flex-direction: row;
-          flex-wrap: wrap;
-          justify-content: center;
+          gap: 20px;
+          padding: 0;
+          list-style: none;
           align-items: center;
 
-          li {
-            margin: 0 3px;
-            list-style: none;
-          }
-        }
-      }
-    }
-
-    &.breadcrumbs {
-      > nav > ul {
-        display: flex;
-        gap: 20px;
-        padding: 0;
-        list-style: none;
-
-        @media screen and (max-width: $mobile-breakpoint) {
-          flex-direction: column;
-          gap: 0;
-        }
-
-        > li {
-          position: relative;
-
-          a {
-            padding: 5px 0;
-            width: 100%;
-            height: 100%;
+          @media screen and (max-width: $mobile-breakpoint) {
+            flex-direction: column;
+            gap: 0;
           }
 
-          &:not(:first-child) {
-            &::before {
-              content: '';
-              position: absolute;
-              background-color: var(--breadcrumb-header);
-              top: calc(50% - 6px);
-              left: -16px;
-              width: 12px;
-              height: 12px;
-              clip-path: polygon(50% 0, 75% 50%, 50% 100%, 25% 100%, 50% 50%, 25% 0);
-            }
-
-            @media screen and (max-width: $mobile-breakpoint) {
-              margin-left: 20px;
-            }
-          }
-
-          .choices {
+          > li {
             position: relative;
 
-            > span {
-              cursor: pointer;
-            }
-
-            ul {
-              display: none;
-              padding: 15px;
-              position: absolute;
-              min-width: 200px;
-              background-color: var(--header-background);
-              box-shadow: var(--panel-shadow);
-              border-top: 3px rgba(255, 255, 255, 0.2) solid;
-
-              &::before {
-                content: 'Switch to…';
-                display: list-item;
-                font-size: 13px;
+            &:first-child {
+              a {
+                padding-left: 40px;
+                background-image: url('/images/logo-medium.svg');
+                background-position: left center;
+                background-size: 30px;
+                background-repeat: no-repeat;
+                background-clip: padding-box;
               }
             }
 
-            &:hover {
+            a {
+              padding: 5px 0;
+              width: 100%;
+              height: 100%;
+            }
+
+            &:not(:first-child) {
+              &::before {
+                content: '';
+                position: absolute;
+                background-color: var(--breadcrumb-header);
+                top: calc(50% - 6px);
+                left: -16px;
+                width: 12px;
+                height: 12px;
+                clip-path: polygon(50% 0, 75% 50%, 50% 100%, 25% 100%, 50% 50%, 25% 0);
+                opacity: 0.75;
+              }
+
+              @media screen and (max-width: $mobile-breakpoint) {
+                margin-left: 20px;
+              }
+            }
+
+            .choices {
+              position: relative;
+
+              > span {
+                cursor: pointer;
+              }
+
               ul {
-                display: grid;
-                gap: 5px;
+                display: none;
+                padding: 15px;
+                position: absolute;
+                min-width: 200px;
+                background-color: var(--header-background);
+                box-shadow: var(--panel-shadow);
+                border-top: 3px rgba(255, 255, 255, 0.2) solid;
+
+                &::before {
+                  content: 'Switch to…';
+                  display: list-item;
+                  font-size: 13px;
+                }
+              }
+
+              &:hover {
+                ul {
+                  display: grid;
+                  gap: 5px;
+                }
               }
             }
           }
