--- a/FrontEnd/styles/maintainer_info.scss
+++ b/FrontEnd/styles/maintainer_info.scss
@@ -20,7 +20,7 @@
 .markdown_badges {
   display: flex;
   align-items: center;
-  margin: 5px 0 15px 0;
+  margin: 5px 0 15px;
   gap: 10px;
 
   form {
