--- a/FrontEnd/styles/home.scss
+++ b/FrontEnd/styles/home.scss
@@ -20,15 +20,15 @@
 /* Search results drop down */
 
 #results {
-  margin-top: -5px;
   position: absolute;
+  z-index: 9999;
+  overflow: scroll;
   width: 100%;
   max-height: 500px;
-  overflow: scroll;
+  margin-top: -5px;
   background-color: var(--results-background);
+  box-shadow: 0 3px 8px 2px var(--results-shadow);
   border-top: 1px var(--results-separator) solid;
-  box-shadow: 0px 3px 8px 2px var(--results-shadow);
-  z-index: 9999;
 
   ul {
     margin: 0;
@@ -36,10 +36,10 @@
   }
 
   li {
-    margin: 0;
-    padding: 20px;
     display: flex;
     flex-direction: column;
+    margin: 0;
+    padding: 20px;
     border-bottom: 1px var(--results-separator) solid;
 
     &:last-child {
@@ -54,8 +54,8 @@
   div {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: baseline;
+    justify-content: space-between;
   }
 
   h4 {
@@ -69,7 +69,7 @@
   }
 
   p {
-    margin: 5px 0 0 0;
+    margin: 5px 0 0;
     font-size: 14px;
     color: var(--page-text);
   }
@@ -81,17 +81,17 @@
 
   .more_results {
     padding: 20px;
-    text-align: center;
     font-weight: 600;
-    background-color: var(--results-separator);
+    text-align: center;
     color: var(--page-text);
+    background-color: var(--results-separator);
   }
 
   &.error {
-    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px;
     color: var(--error-text);
     background-color: var(--error-background);
 
@@ -114,16 +114,16 @@
   }
 
   ul {
+    overflow: hidden;
+    max-width: 250px;
     margin: 0;
     padding: 0;
-    max-width: 250px;
-    overflow: hidden;
   }
 
   li {
-    margin: 15px;
     display: flex;
     flex-direction: column;
+    margin: 15px;
   }
 }
 
@@ -137,22 +137,22 @@
 
 .twitter_spaces {
   position: relative;
+  margin: 20px 0 60px;
   padding: 15px;
-  margin: 20px 0 60px 0;
   background-color: var(--panel-background);
   border-bottom: 3px var(--twitter-blue) solid;
 
   &::before {
     content: '';
     position: absolute;
+    top: -20px;
+    left: -20px;
     display: block;
     width: 40px;
     height: 40px;
-    left: -20px;
-    top: -20px;
-    background-image: url('/images/twitter-spaces.svg');
-    background-size: 100%;
     background-repeat: no-repeat;
+    background-size: 100%;
+    background-image: url('/images/twitter-spaces.svg');
   }
 
   p {
