--- a/FrontEnd/styles/markdown.scss
+++ b/FrontEnd/styles/markdown.scss
@@ -19,12 +19,12 @@
 
 .markdown main {
   picture.shadow img {
-    box-shadow: 0px 3px 8px 2px rgba(100, 100, 100, 0.2);
+    box-shadow: 0 3px 8px 2px rgba(100, 100, 100, 20%);
   }
 
   img {
-    margin: 40px auto;
     display: block;
     max-width: 90%;
+    margin: 40px auto;
   }
 }
