--- a/FrontEnd/styles/modal_panel.scss
+++ b/FrontEnd/styles/modal_panel.scss
@@ -24,27 +24,27 @@
 
   > [data-modal-panel-target='underlay'] {
     position: fixed;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    opacity: var(--panel-underlay-opacity);
     width: 100%;
     height: 100%;
-    opacity: var(--panel-underlay-opacity);
     background-color: var(--panel-underlay-background);
-    z-index: 999;
   }
 
   > section {
     position: fixed;
     top: 50%;
     left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -70%); // Slightly above centre looks best
     z-index: 1000;
+    margin-right: -50%;
     padding: 20px;
     padding-top: 0;
     background-color: var(--panel-background);
-    border-top: 3px var(--panel-border) solid;
     box-shadow: var(--panel-shadow);
+    transform: translate(-50%, -70%); // Slightly above centre looks best
+    border-top: 3px var(--panel-border) solid;
 
     &:not(.visible) {
       display: none;
@@ -54,13 +54,13 @@
       // Using float is unusual these days but it's the easiest way to make the close
       // button stay as part of the layout flow so the intro text wraps around it.
       float: right;
+      cursor: pointer;
       margin: 0 -20px 0 0;
       padding: 10px 15px;
       font-size: 20px;
-      cursor: pointer;
-      border: none;
-      background: none;
       color: var(--page-text);
+      background: none;
+      border: none;
     }
   }
 }
