--- a/FrontEnd/styles/search_results.scss
+++ b/FrontEnd/styles/search_results.scss
@@ -17,7 +17,7 @@
   All styling related search results.
 ---------------------------------------------------------------------------- */
 
-section.search_results {
+section.search-results {
   margin-top: 50px;
 
   // This rule may seem useless but displaying these sections as flex stops browsers
