--- a/FrontEnd/styles/search.scss
+++ b/FrontEnd/styles/search.scss
@@ -72,7 +72,7 @@ nav > ul > li.search {
 section.search {
   margin: 0;
 
-  .filter_suggestions {
+  .filter-suggestions {
     margin-top: 5px;
     font-size: 12px;
 
