--- a/FrontEnd/styles/package_list.scss
+++ b/FrontEnd/styles/package_list.scss
@@ -77,7 +77,7 @@
         background-image: var(--image-star);
       }
 
-      li.has_documentation::before {
+      li.has-documentation::before {
         background-size: 84%;
         background-image: var(--image-book);
       }
