--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -267,7 +267,7 @@
         order: 1;
       }
 
-      section.main_compatibility {
+      section.main-compatibility {
         order: 2;
       }
 
