--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -161,7 +161,7 @@
       }
     }
 
-    section.sidebar_versions {
+    section.sidebar-versions {
       width: 100%;
 
       ul {
@@ -271,7 +271,7 @@
         order: 2;
       }
 
-      section.sidebar_versions {
+      section.sidebar-versions {
         order: 1;
       }
     }
