--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -131,7 +131,7 @@
       }
     }
 
-    section.sidebar_links {
+    section.sidebar-links {
       ul {
         display: grid;
         gap: 5px;
@@ -263,7 +263,7 @@
         }
       }
 
-      section.sidebar_links {
+      section.sidebar-links {
         order: 1;
       }
 
