--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -196,7 +196,7 @@
       }
     }
 
-    section.sidebar_package_authors {
+    section.sidebar-package-authors {
       small {
         display: block;
         padding-left: 22px;
