--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -95,7 +95,7 @@
           color: var(--red-text);
         }
 
-        #license_more_info {
+        #license-more-info {
           display: block;
           font-size: 11px;
         }
