--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -91,7 +91,7 @@
           background-image: var(--image-error);
         }
 
-        .no_license {
+        .no-license {
           color: var(--red-text);
         }
 
