--- a/FrontEnd/styles/maintainer_info.scss
+++ b/FrontEnd/styles/maintainer_info.scss
@@ -17,7 +17,7 @@
   Styles for the Information for Package Maintainers page.
 ---------------------------------------------------------------------------- */
 
-.markdown_badges {
+.markdown-badges {
   display: flex;
   gap: 10px;
   align-items: center;
@@ -29,7 +29,7 @@
 }
 
 @media screen and (max-width: $mobile-breakpoint) {
-  .markdown_badges {
+  .markdown-badges {
     flex-direction: column;
     align-items: flex-start;
   }
