--- a/FrontEnd/styles/layout.scss
+++ b/FrontEnd/styles/layout.scss
@@ -59,7 +59,7 @@ main > .inner {
       width: 100%;
     }
 
-    &.mobile_reversed {
+    &.mobile-reversed {
       flex-direction: column-reverse;
     }
   }
