--- a/FrontEnd/styles/home.scss
+++ b/FrontEnd/styles/home.scss
@@ -135,7 +135,7 @@
 
 /* Twitter Spaces CTA */
 
-.twitter_spaces {
+.twitter-spaces {
   position: relative;
   margin: 20px 0 60px;
   padding: 15px;
