--- a/FrontEnd/styles/copyable_input.scss
+++ b/FrontEnd/styles/copyable_input.scss
@@ -17,7 +17,7 @@
   Styles for copyable inputs, where a button is appended after an input.
 ---------------------------------------------------------------------------- */
 
-.copyable_input {
+.copyable-input {
   display: flex;
   flex-direction: row;
 
