--- a/FrontEnd/styles/error.scss
+++ b/FrontEnd/styles/error.scss
@@ -17,6 +17,6 @@
   Error page.
 ---------------------------------------------------------------------------- */
 
-section.error_message {
+section.error-message {
   padding: 50px 0;
 }
