--- a/FrontEnd/styles/build_logs.scss
+++ b/FrontEnd/styles/build_logs.scss
@@ -17,7 +17,7 @@
   Individual build log page.
 ---------------------------------------------------------------------------- */
 
-#build_log {
+#build-log {
   height: 40vh;
   white-space: pre-wrap;
 }
