--- a/FrontEnd/styles/base.scss
+++ b/FrontEnd/styles/base.scss
@@ -244,7 +244,7 @@ a.big_button {
   text-overflow: ellipsis;
 }
 
-.count_tag {
+.count-tag {
   padding: 1px 5px;
   font-size: 10px;
   color: var(--page-text);
