--- a/FrontEnd/styles/build_monitor.scss
+++ b/FrontEnd/styles/build_monitor.scss
@@ -17,7 +17,7 @@
   Individual build log page.
 ---------------------------------------------------------------------------- */
 
-.build_monitor {
+.build-monitor {
   display: grid;
   gap: 10px;
 
