--- a/FrontEnd/styles/build_monitor.scss
+++ b/FrontEnd/styles/build_monitor.scss
@@ -33,7 +33,7 @@
       color: var(--page-text);
     }
 
-    .package_name {
+    .package-name {
       grid-column: 1 / span 4;
 
       h3 {
@@ -122,7 +122,7 @@
         grid-column: span 2;
       }
 
-      .package_name {
+      .package-name {
         grid-column: 1 / span 4;
       }
 
